--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "type": "module",
 
   "scripts": {
+    "test": "node ./Scripts/Test/Main.js",
     "build": "node ./Scripts/Build/Main.js"
   },
 
   "dependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.23.10",
+    "@babel/eslint-plugin": "^7.23.5",
+    "@babel/plugin-syntax-import-assertions": "^7.23.3",
     "chalk": "^5.3.0",
+    "eslint": "^8.57.0",
     "terser": "^5.28.1",
     "tsup": "^8.0.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wcwidth": "^1.0.1"
   }
 }
